--- a/FrontEnd/src/routes/router/router.styles.css
+++ b/FrontEnd/src/routes/router/router.styles.css
@@ -23,6 +23,8 @@
   color: #eeeeee;
   font-size: 16px;
   font-weight: bold;
+  background-color: rgba(128, 128, 128, 0);
+  text-align: center;
 }
 
 .title {
@@ -43,5 +45,12 @@
   margin-top: 50px;
   padding: 15px 10px;
   border-radius: 5px;
-  text-align: center
+  text-align: center;
+}
+.linea{
+  width: 1px; 
+  height: 500px; 
+  display: inline-block;
+  margin-right:20px;
+  margin-left:20px;
 }
