--- a/FrontEnd/src/assets/styles/root.scss
+++ b/FrontEnd/src/assets/styles/root.scss
@@ -1,26 +1,25 @@
-@import 'reset';
+// @import 'reset';
 
-h1, h2, h3, h4, h5, h6, p, input, a, body {
-  font-family: Verdana, sans-serif;
-  font-size: 16px;
-}
+// h1, h2, h3, h4, h5, h6, p, input, a, body {
+//   font-family: Verdana, sans-serif;
+//   font-size: 16px;
+// }
 
-a {
-  text-decoration: none;
-}
+// a {
+//   text-decoration: none;
+// }
 
-body {
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-  background-color: #92b6d5;
- 
-}
+// // body {
+// //   display: flex;
+// //   width: 100vw;
+// //   height: 100vh;
+// //   flex-direction: column;
+// //   flex-wrap: nowrap;
+// //   justify-content: center;
+// //   align-items: center;
+// //   background-color: #92b6d5;
+// // }
 
-h1{
-  color:white;
-}
+// h1{
+//   color:white;
+// }
