--- a/FrontEnd/src/routes/router/router.styles.css
+++ b/FrontEnd/src/routes/router/router.styles.css
@@ -1,11 +1,13 @@
 .container {
-  width: 100vw;
-  max-width: 780px;
+  width: 100%;
   display: flex;
+  height: 100%;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
+  background-color: #92b6d5 ;
+  padding:100px;
 }
 
 .subContainer {
@@ -29,6 +31,7 @@
 
 .title {
   font-size: 38px;
+  align-content: center;
 }
 
 .image {
@@ -50,7 +53,23 @@
 .linea{
   width: 1px; 
   height: 500px; 
-  display: inline-block;
-  margin-right:20px;
-  margin-left:20px;
+  
+ 
+}
+
+body {
+  /* display: flex;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  /* flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;*/ 
+  /* background-color: #92b6d5;  */
+}
+
+.background{
+  
 }
