--- a/FrontEnd/src/routes/router/router.styles.css
+++ b/FrontEnd/src/routes/router/router.styles.css
@@ -1,13 +1,13 @@
 .container {
   width: 100%;
+  height: 1000px;
   display: flex;
-  height: 100%;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
   background-color: #92b6d5 ;
-  padding:100px;
+  margin-top: -50px;
 }
 
 .subContainer {
@@ -19,7 +19,7 @@
 }
 
 .button {
-  padding: 20px 30px;
+  padding: 10px 10px;
   border: 3px solid #eeeeee;
   border-radius: 5px;
   color: #eeeeee;
@@ -72,6 +72,6 @@ body {
   /* background-color: #92b6d5;  */
 }
 
-.background{
-  
+h3{
+  color:white;
 }
