--- a/FrontEnd/src/components/formConfirmacion/formConfirmacion.styles.css
+++ b/FrontEnd/src/components/formConfirmacion/formConfirmacion.styles.css
@@ -1,14 +1,30 @@
 h4{
-    margin-top:50px;
+    margin-top:30px;
     color:rgb(85, 84, 84);
     text-align: center;
+    font-size: 40px;
 }
 
 h5{
     color:rgb(85, 84, 84);
 }
 
-.lateral{
-margin-top: 200px;
+
+p{
+    color:rgb(20, 24, 26);
     
+}
+
+.label{
+    color:black;
+    font-weight: 400;
+}
+
+.boton{
+    border: 3px blue solid;
+}
+
+ul{
+    margin-left: -30px;
+    margin-right: 5px;
 }
