--- a/FrontEnd/src/routes/router/router.styles.css
+++ b/FrontEnd/src/routes/router/router.styles.css
@@ -1,3 +1,4 @@
+
 .container {
   width: 100%;
   height: 1000px;
@@ -21,6 +22,17 @@
 .button {
   padding: 10px 10px;
   border: 3px solid #eeeeee;
+  border-radius: 5px;
+  color: #eeeeee;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: rgba(128, 128, 128, 0);
+  text-align: center;
+}
+
+.button2 {
+  padding: 10px 10px;
+  border: 3px solid #1095ee;
   border-radius: 5px;
   color: #eeeeee;
   font-size: 16px;
@@ -75,3 +87,32 @@ body {
 h3{
   color:white;
 }
+
+.animate	{ 
+	width: 100%; 
+	height: 400px; 
+	background-image: url('../../assets/img/nubes.png');
+	background-position: 100px 0px;
+	background-repeat: repeat-x;
+	animation: animatedBackground 40s linear infinite;
+} 
+
+
+
+ @keyframes animatedBackground {
+  from { background-position: 100% 0; }
+  to { background-position: 0% 0; }
+}
+
+/* 
+.animate{ 
+  width: 100%; 
+  height: 100px;
+  background-image: url('../../assets/img/nubes.png');
+  background-position: 100px 100px;
+  background-repeat: repeat-x;
+  animation: animatedBackground 40s linear infinite;
+  -ms-animation: animatedBackground 40s linear infinite;
+  -moz-animation: animatedBackground 40s linear infinite;
+  -webkit-animation: animatedBackground 40s linear infinite;
+} */
