--- a/FrontEnd/src/routes/router/router.styles.css
+++ b/FrontEnd/src/routes/router/router.styles.css
@@ -42,15 +42,18 @@
 }
 
 .title {
-  font-size: 38px;
+  font-size: 45px;
   align-content: center;
   text-align: center;
   color:white;
+  margin-top:-50px;
 }
 
 .image {
-  width: 100%;
-  max-width:600px;
+ 
+  width:17%;
+  margin: 15px 0;
+  /* max-width:50px; */
 }
 
 .text {
@@ -87,7 +90,7 @@ body {
 h3{
   color:white;
 }
-
+/* 
 .animate	{ 
 	width: 100%; 
 	height: 400px; 
@@ -102,7 +105,7 @@ h3{
  @keyframes animatedBackground {
   from { background-position: 100% 0; }
   to { background-position: 0% 0; }
-}
+} */
 
 /* 
 .animate{ 
