--- a/FrontEnd/src/routes/router/router.styles.css
+++ b/FrontEnd/src/routes/router/router.styles.css
@@ -9,6 +9,7 @@
   align-items: center;
   background-color: #92b6d5 ;
   margin-top: -50px;
+  /* background-image: url('../../assets/img/fondo.png') */
 }
 
 .subContainer {
