--- a/FrontEnd/src/components/formConfirmacion/formConfirmacion.styles.css
+++ b/FrontEnd/src/components/formConfirmacion/formConfirmacion.styles.css
@@ -12,7 +12,7 @@ h5{
 
 p{
     color:rgb(20, 24, 26);
-    
+    font-size: 200px;
 }
 
 .label{
@@ -27,4 +27,8 @@ p{
 ul{
     margin-left: -30px;
     margin-right: 5px;
+}
+
+#foto{
+    width: 500
 }
