--- a/FrontEnd/src/components/formConfirmacion/formConfirmacion.styles.css
+++ b/FrontEnd/src/components/formConfirmacion/formConfirmacion.styles.css
@@ -24,11 +24,15 @@ p{
     border: 3px blue solid;
 }
 
-ul{
+/* ul{
     margin-left: -30px;
     margin-right: 5px;
-}
+} */
 
 #foto{
     width: 500
 }
+
+/* li{
+    width: 100px;
+} */
