--- a/FrontEnd/src/components/mesas/mesas.styles.css
+++ b/FrontEnd/src/components/mesas/mesas.styles.css
@@ -6,9 +6,10 @@ p{
     font-size:10px;
 }
 .circle{  
-    background-color: green ;
-    min-height: 300px;
-
+    background-image:url('../../assets/img/madera.jpg');
+    min-height: 250px;
+    max-width: 300px;
+    border-radius: 80px;
 }
 /* .circle div { } */
 
@@ -25,6 +26,10 @@ h5{
 }
 
 .lista li{
-    width: 200px;
-    background-color: green;
+    width: 110px;
+    height:30px ;
+    align-content: center;
+    list-style: none;
+    margin-bottom: 5px;
+ 
 }
