--- a/FrontEnd/src/components/mesas/mesas.styles.css
+++ b/FrontEnd/src/components/mesas/mesas.styles.css
@@ -3,18 +3,31 @@
 }
 
 p{
-    font-size:10px;
+    font-size:12px;
 }
 .circle{  
     background-image:url('../../assets/img/madera.jpg');
-    min-height: 250px;
-    max-width: 300px;
+    min-height: 350px;
+    min-width: 100px;
     border-radius: 80px;
     display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  margin-bottom: 20px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.circlePres{  
+    background-image:url('../../assets/img/madera.jpg');
+    height: 200px;
+    width: 500px;
+    border-radius: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    margin-bottom: 20px;
 }
 /* .circle div { } */
 
@@ -31,9 +44,18 @@ h5{
 }
 
 .lista li{
-    width: 110px;
+    width: 120px;
     height:30px ;
     align-content: center;
+    list-style: none;
+    margin-bottom: 5px;
+}
+
+
+.listaPres li{
+    display: flex;
+    padding-right: 20px;
+    display: inline;
     list-style: none;
     margin-bottom: 5px;
 }
