--- a/FrontEnd/src/components/navbarInicio/navbarInicio.css
+++ b/FrontEnd/src/components/navbarInicio/navbarInicio.css
@@ -3,6 +3,7 @@
 }
 
 .navbar{
-    background-color: #688197;
+    background: linear-gradient(to bottom, #808c94, rgb(102, 119, 111));
+    /* background-color: #688197; */
     color:black;
 }
