--- a/FrontEnd/src/components/paginaInicio/paginaInicio.css
+++ b/FrontEnd/src/components/paginaInicio/paginaInicio.css
@@ -2,9 +2,16 @@
     background-color: green;
 }
 
-.image{
-    max-width: 100%;
+.img{
+    
+} 
+
+h2{
+  color:gray;
+  margin-top: 200px;
+  text-align: center;
 }
+
 
 .bloque1{
     background-attachment: fixed;
@@ -13,9 +20,9 @@
     overflow:hidden;
     padding:0;
     position: relative;
-    height:1000px ;
+    height:900px ;
     background-size: cover;
-    background-image: url('../../assets/img/paginaInicio.jpg');
+    background-image: url('../../assets/img/inicio.jpg');
 }
 
 .bloque2{
@@ -27,7 +34,7 @@
     position: relative;
     height:1000px ;
     background-size: cover;
-    background-image: url('../../assets/img/paginaInicio2.jpg');
+    
 }
 .bloque3{
     background-attachment: fixed;
@@ -57,7 +64,17 @@
     margin-top: -50px;
     /* background-image: url('../../assets/img/fondo.png') */
   }
-  
+  .informacion{
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+    margin-top: 100px;
+  }
   .subContainer {
     width: 100%;
     display: flex;
