--- a/FrontEnd/src/components/paginaRegisLog/paginaRegisLog.css
+++ b/FrontEnd/src/components/paginaRegisLog/paginaRegisLog.css
@@ -7,10 +7,11 @@
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
-  background-color: #92b6d5 ;
+  background-color: #92b6d5cb ;
   margin-top: -50px;
   margin-bottom:-20px;
   border-radius: 20px;
+  opacity: 1;
   /* background-image: url('../../assets/img/fondo.png') */
 }
 
@@ -79,49 +80,7 @@
  
 }
 
-body {
-  /* display: flex;
-  width: 100vw;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
-  /* flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;*/ 
-  /* background-color: #92b6d5;  */
-}
 
 h3{
   color:white;
 }
-/* 
-.animate	{ 
-	width: 100%; 
-	height: 400px; 
-	background-image: url('../../assets/img/nubes.png');
-	background-position: 100px 0px;
-	background-repeat: repeat-x;
-	animation: animatedBackground 40s linear infinite;
-} 
-
-
-
- @keyframes animatedBackground {
-  from { background-position: 100% 0; }
-  to { background-position: 0% 0; }
-} */
-
-/* 
-.animate{ 
-  width: 100%; 
-  height: 100px;
-  background-image: url('../../assets/img/nubes.png');
-  background-position: 100px 100px;
-  background-repeat: repeat-x;
-  animation: animatedBackground 40s linear infinite;
-  -ms-animation: animatedBackground 40s linear infinite;
-  -moz-animation: animatedBackground 40s linear infinite;
-  -webkit-animation: animatedBackground 40s linear infinite;
-} */
-
